# MyCLib

./: .gitignore  CMakeLists.txt  README.md  README.pt-br.md  README.zh-cn.md
include/: string_utils.h  ui.h
src/: main.c  math_utils.c  string_utils.c  ui.c
